# fpl

./: FantasyTeam.lp  Makefile  getdata.ps1  players_raw.csv  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
fpl/: dataset.py
models/: team_select.py
references/: notepad.txt
